2010-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/callbacks.c, src/vte.h, src/main.c:
   Fix segfaults when using 'Send Selection to Terminal' and the VTE
   is not loaded, and when using Ctrl-A after enabling the 'Load VTE'
   pref (patch by Dimitar Zhekov, thanks).
 * src/build.c, src/keyfile.c:
   Fix some more wrong uses of vte_info.load_vte instead of
   vte_info.have_vte.
 * src/main.c:
   Disable 'Send Selection to Terminal' item when not available
   instead of removing it to avoid trailing separator.
 * doc/geany.txt, doc/geany.html:
   Add 'Configuration file paths' section and link to it instead of
   repeating typical system data and user config directory paths.
   List 2 Tools->Configuration Files menu items.
   Add 'Plugin Manager' section break.
   Edit some related sections.
 * doc/geany.txt, doc/geany.html:
   Update Ignore Tags section with example and menu item.
 * doc/geany.txt, doc/geany.html:
   List 'Tools->Configuration Files->filetypes.common' menu item.


2010-12-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Improve error message for document_save_file() if doc->file_name is
   NULL (reusing existing strings).
   Add warning about this in the API docs.


2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/ScintillaGTK.cxx:
   Backport Scintilla HG fix: Remove styling idle in destructor to
   avoid crashing when idle called after ScintillaGTK instance
   destroyed (fixes #3111058).
   This prevents a crash when closing a modified document (usually
   without a trailing newline) and choosing Save.


2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Warn about file truncation if unsafe file saving fails.


2010-11-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Check result of fclose() for utils_write_file().

